syntax = "proto3";

package com.oc.hawk.trace_logging;

//package istio_ecosystem.wasm_extensions.grpc_logging;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service LoggingService {
  rpc WriteLog(WriteLogRequest) returns (WriteLogResponse);
}

message WriteLogRequest {
  message LogEntry {
    string source_address = 1;
    string destination_address = 2;
    string destination_workload = 3;
    string destination_namespace = 4;
    string host = 5;
    string path = 6;

    string referer = 8;
    string request_id = 9;
    string protocol = 13;
    string method = 14;
    string request_headers = 15;
    string response_headers = 16;
    string request_body = 17;
    string response_body = 18;
    google.protobuf.Timestamp timestamp = 10;
    google.protobuf.Duration latency = 11;
  }

  repeated LogEntry log_entries = 1;
}

message WriteLogResponse {}
